--- a/cv.html
+++ b/cv.html
@@ -4,13 +4,34 @@
 <head>
     <title>CV PARPAILLON Olivier</title>
     <meta charset="utf-8">
-    <meta name="viewport">
 </head>
 
 <body>
     <header>
         <h1>CV de Parpaillon Olivier</h1>
     </header>
+    <div class="présentation">
+        <h2>Présentation</h2>
+        <p>Je me prénomme Olivier PARPAILLON, étudiant en bachelor informatique à Campus Academy. Je sors d'un BAC professionnelle en SN Système Numérique du lycée Sainte Marie du Port. Je recherches des alternances afin d'enrichir mon expérience professionnelle.</p>
+    </div>
+
+    <div class="Contact">
+        <h2>Contact</h2>
+        <p>Nom :</p>
+        <p>PARPAILLON Olivier</p>
+        <br>
+        <p>Adresse :</p>
+        <p>9ter rue du laurier - 85180 Sables d'Olonne</p>
+        <br>
+        <p>Téléphone :</p>
+        <p>06.79.60.66.88</p>
+        <br>
+        <p>Email :</p>
+        <p>olivier.parpaillon@campus.academy</p>
+    </div>
 </body>
+
+
+
 
 </html>
