--- a/cv.html
+++ b/cv.html
@@ -12,7 +12,9 @@
     </header>
     <div class="présentation">
         <h2>Présentation</h2>
-        <p>Je me prénomme Olivier PARPAILLON, étudiant en bachelor informatique à Campus Academy. Je sors d'un BAC professionnelle en SN Système Numérique du lycée Sainte Marie du Port. Je recherches des alternances afin d'enrichir mon expérience professionnelle.</p>
+        <p>Je me prénomme Olivier PARPAILLON, étudiant en bachelor informatique à Campus Academy. <br>Je sors d'un BAC professionnelle en SN Système Numérique du lycée Sainte Marie du Port.<br> Je recherches des alternances afin d'enrichir mon expérience
+            professionnelle.
+        </p>
     </div>
 
     <div class="Contact">
@@ -29,6 +31,21 @@
         <p>Email :</p>
         <p>olivier.parpaillon@campus.academy</p>
     </div>
+
+    <div class="Competences">
+        <h2>Compétences</h2>
+        <p>Anglais : B2</p>
+        <p>Travail en équipe</p>
+        <p>Responsable</p>
+        <p>Autonome</p>
+    </div>
+
+    <div class="Loisirs">
+        <p>Musique</p>
+        <p>Jeux-vidéos</p>
+        <p>Littérature</p>
+    </div>
+
 </body>
 
 
