--- a/cv.html
+++ b/cv.html
@@ -46,9 +46,17 @@
         <p>Littérature</p>
     </div>
 
+    <div class="Formation">
+        <p>Lycée Sainte Marie du Port</p>
+        <p>2017-2019</p>
+        <p>BEP Système Numérique durant l'année 2018-2019</p>
+        <p>BAC Système Numérique (mention bien) durant l'année 2019-2020</p>
+        <br>
+        <p>Campus Academy</p>
+        <p>2020 - EN COURS</p>
+        <p>Bachelor informatique</p>
+    </div>
+
 </body>
-
-
-
 
 </html>
