--- a/cv.html
+++ b/cv.html
@@ -16,7 +16,7 @@
             professionnelle.
         </p>
     </div>
-
+    <br>
     <div class="Contact">
         <h2>Contact</h2>
         <p>Nom :</p>
@@ -31,7 +31,7 @@
         <p>Email :</p>
         <p>olivier.parpaillon@campus.academy</p>
     </div>
-
+    <br>
     <div class="Competences">
         <h2>Compétences</h2>
         <p>Anglais : B2</p>
@@ -39,14 +39,15 @@
         <p>Responsable</p>
         <p>Autonome</p>
     </div>
-
+    <br>
     <div class="Loisirs">
         <p>Musique</p>
         <p>Jeux-vidéos</p>
         <p>Littérature</p>
     </div>
-
+    <br>
     <div class="Formation">
+        <h2>Formation</h2>
         <p>Lycée Sainte Marie du Port</p>
         <p>2017-2019</p>
         <p>BEP Système Numérique durant l'année 2018-2019</p>
