--- a/cv.html
+++ b/cv.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>CV PARPAILLON Olivier</title>
+    <style type="text/css" src="cv.css"></style>
     <meta charset="utf-8">
 </head>
 
@@ -41,6 +42,7 @@
     </div>
     <br>
     <div class="Loisirs">
+        <h2>Loisirs</h2>
         <p>Musique</p>
         <p>Jeux-vidéos</p>
         <p>Littérature</p>
