--- a/cv.html
+++ b/cv.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="Fr">
 
 <head>
     <title>CV PARPAILLON Olivier</title>
@@ -58,6 +58,25 @@
         <p>Campus Academy</p>
         <p>2020 - EN COURS</p>
         <p>Bachelor informatique</p>
+    </div>
+    <br>
+    <div>
+        <h2>Parcours professionnel</h2>
+        <h4>DFI Informatique (Château d'Olonne) | Stagiaire</h4>
+        <p>3 semaines - Avril/Juin 2018</p>
+        <p>Réparation hardware d'ordi fixe et portable <br> Recondionnement d'ordinateurs fixe et portable pour la revente</p>
+        <br>
+        <h4>Atlantic Caisse Réseau (Olonne sur mer) | Stagiaire</h4>
+        <p>7 semaines - Juin 2018 & Novembre 2019</p>
+        <p>Assistance sur des installations de caisses enregistreuses en réseau pour des restaurants. <br>Configfuration de routeur et point d'accès WiFi pour le réseau d'une entreprise.</p>
+        <br>
+        <h4>DFI Informatique (Château d'Olonne) | Stagiaire</h4>
+        <p>4 semaines - Janvier/Février 2019</p>
+        <p>Maintenances informatique, nettoyage de virus/malware/spyware, remplacement hardware ou réparation software sur des ordinateurs client.</p>
+        <br>
+        <h4>Flannagan Kerrins (Irlande) | Stagiaire</h4>
+        <p>4 semaines - Avril/Mai 2019</p>
+        <p>Stage découverte au sein d'une entreprise de ventes de meubles d'intérieur, dans le cadre du projet ERASMUS afin d'y améliorer mon anglais.</p>
     </div>
 
 </body>
