Mise en page css

--- a/cv.html
+++ b/cv.html
@@ -2,83 +2,89 @@
 <html lang="Fr">
 
 <head>
-    <title>CV PARPAILLON Olivier</title>
-    <style type="text/css" src="cv.css"></style>
     <meta charset="utf-8">
+    <title>CV PARPAILLON Olivier</title>
+    <link href="cv.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-    <header>
+    <header class="en-tete">
         <h1>CV de Parpaillon Olivier</h1>
     </header>
-    <div class="présentation">
-        <h2>Présentation</h2>
-        <p>Je me prénomme Olivier PARPAILLON, étudiant en bachelor informatique à Campus Academy. <br>Je sors d'un BAC professionnelle en SN Système Numérique du lycée Sainte Marie du Port.<br> Je recherches des alternances afin d'enrichir mon expérience
-            professionnelle.
-        </p>
-    </div>
-    <br>
-    <div class="Contact">
-        <h2>Contact</h2>
-        <p>Nom :</p>
-        <p>PARPAILLON Olivier</p>
-        <br>
-        <p>Adresse :</p>
-        <p>9ter rue du laurier - 85180 Sables d'Olonne</p>
-        <br>
-        <p>Téléphone :</p>
-        <p>06.79.60.66.88</p>
-        <br>
-        <p>Email :</p>
-        <p>olivier.parpaillon@campus.academy</p>
-    </div>
-    <br>
-    <div class="Competences">
-        <h2>Compétences</h2>
-        <p>Anglais : B2</p>
-        <p>Travail en équipe</p>
-        <p>Responsable</p>
-        <p>Autonome</p>
-    </div>
-    <br>
-    <div class="Loisirs">
-        <h2>Loisirs</h2>
-        <p>Musique</p>
-        <p>Jeux-vidéos</p>
-        <p>Littérature</p>
-    </div>
-    <br>
-    <div class="Formation">
-        <h2>Formation</h2>
-        <p>Lycée Sainte Marie du Port</p>
-        <p>2017-2019</p>
-        <p>BEP Système Numérique durant l'année 2018-2019</p>
-        <p>BAC Système Numérique (mention bien) durant l'année 2019-2020</p>
-        <br>
-        <p>Campus Academy</p>
-        <p>2020 - EN COURS</p>
-        <p>Bachelor informatique</p>
-    </div>
-    <br>
-    <div>
-        <h2>Parcours professionnel</h2>
-        <h4>DFI Informatique (Château d'Olonne) | Stagiaire</h4>
-        <p>3 semaines - Avril/Juin 2018</p>
-        <p>Réparation hardware d'ordi fixe et portable <br> Recondionnement d'ordinateurs fixe et portable pour la revente</p>
-        <br>
-        <h4>Atlantic Caisse Réseau (Olonne sur mer) | Stagiaire</h4>
-        <p>7 semaines - Juin 2018 & Novembre 2019</p>
-        <p>Assistance sur des installations de caisses enregistreuses en réseau pour des restaurants. <br>Configfuration de routeur et point d'accès WiFi pour le réseau d'une entreprise.</p>
-        <br>
-        <h4>DFI Informatique (Château d'Olonne) | Stagiaire</h4>
-        <p>4 semaines - Janvier/Février 2019</p>
-        <p>Maintenances informatique, nettoyage de virus/malware/spyware, remplacement hardware ou réparation software sur des ordinateurs client.</p>
-        <br>
-        <h4>Flannagan Kerrins (Irlande) | Stagiaire</h4>
-        <p>4 semaines - Avril/Mai 2019</p>
-        <p>Stage découverte au sein d'une entreprise de ventes de meubles d'intérieur, dans le cadre du projet ERASMUS afin d'y améliorer mon anglais.</p>
-    </div>
+    <div class="container">
+        <div class="Bloc_left">
+            <div class="Presentation">
+                <h2>Présentation</h2>
+                <p>Je me prénomme Olivier PARPAILLON, étudiant en bachelor informatique à Campus Academy. <br>Je sors d'un BAC professionnelle en SN Système Numérique du lycée Sainte Marie du Port.<br> Je recherches des alternances afin d'enrichir mon expérience
+                    professionnelle.
+                </p>
+            </div>
+            <br>
+            <div class="Contact">
+                <h2>Contact</h2>
+                <p>Nom :</p>
+                <p>PARPAILLON Olivier</p>
+                <br>
+                <p>Adresse :</p>
+                <p>9ter rue du laurier - 85180 Sables d'Olonne</p>
+                <br>
+                <p>Téléphone :</p>
+                <p>06.79.60.66.88</p>
+                <br>
+                <p>Email :</p>
+                <p>olivier.parpaillon@campus.academy</p>
+            </div>
+            <br>
+            <div class="Competences">
+                <h2>Compétences</h2>
+                <p>Anglais : B2</p>
+                <p>Travail en équipe</p>
+                <p>Responsable</p>
+                <p>Autonome</p>
+            </div>
+            <br>
+            <div class="Loisirs">
+                <h2>Loisirs</h2>
+                <p>Musique</p>
+                <p>Jeux-vidéos</p>
+                <p>Littérature</p>
+            </div>
+        </div>
 
+
+        <div class="Bloc_right">
+            <div class="Formation">
+                <h2>Formation</h2>
+                <p>Lycée Sainte Marie du Port</p>
+                <p>2017-2019</p>
+                <p>BEP Système Numérique durant l'année 2018-2019</p>
+                <p>BAC Système Numérique (mention bien) durant l'année 2019-2020</p>
+                <br>
+                <p>Campus Academy</p>
+                <p>2020 - EN COURS</p>
+                <p>Bachelor informatique</p>
+            </div>
+            <br>
+            <div class="ParcoursPro">
+                <h2>Parcours professionnel</h2>
+                <h4>DFI Informatique (Château d'Olonne) | <u>Stagiaire</u></h4>
+                <p>3 semaines - Avril/Juin 2018</p>
+                <p>Réparation hardware d'ordi fixe et portable <br> Recondionnement d'ordinateurs fixe et portable pour la revente</p>
+                <br>
+                <h4>Atlantic Caisse Réseau (Olonne sur mer) | <u>Stagiaire</u></h4>
+                <p>7 semaines - Juin 2018 & Novembre 2019</p>
+                <p>Assistance sur des installations de caisses enregistreuses en réseau pour des restaurants. <br>Configfuration de routeur et point d'accès WiFi pour le réseau d'une entreprise.</p>
+                <br>
+                <h4>DFI Informatique (Château d'Olonne) | <u>Stagiaire</u></h4>
+                <p>4 semaines - Janvier/Février 2019</p>
+                <p>Maintenances informatique, nettoyage de virus/malware/spyware, remplacement hardware ou réparation software sur des ordinateurs client.</p>
+                <br>
+                <h4>Flannagan Kerrins (Irlande) | <u>Stagiaire</u></h4>
+                <p>4 semaines - Avril/Mai 2019</p>
+                <p>Stage découverte au sein d'une entreprise de ventes de meubles d'intérieur, dans le cadre du projet ERASMUS afin d'y améliorer mon anglais.</p>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
