--- a/cv.html
+++ b/cv.html
@@ -2,6 +2,7 @@
 <html lang="Fr">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>CV PARPAILLON Olivier</title>
     <link href="cv.css" rel="stylesheet" type="text/css" />
@@ -37,17 +38,17 @@
             <br>
             <div class="Competences">
                 <h2>Compétences</h2>
-                <p>Anglais : B2</p>
-                <p>Travail en équipe</p>
-                <p>Responsable</p>
-                <p>Autonome</p>
+                <li>Anglais : B2</li>
+                <li>Travail en équipe</li>
+                <li>Responsable</li>
+                <li>Autonome</li>
             </div>
             <br>
             <div class="Loisirs">
                 <h2>Loisirs</h2>
-                <p>Musique</p>
-                <p>Jeux-vidéos</p>
-                <p>Littérature</p>
+                <li>Musique</li>
+                <li>Jeux-vidéos</li>
+                <li>Littérature</li>
             </div>
         </div>
 
