--- a/cv.html
+++ b/cv.html
@@ -9,8 +9,10 @@
 </head>
 
 <body>
-    <header class="en-tete">
-        <h1>CV de Parpaillon Olivier</h1>
+    <header class="test">
+        <div class="en-tete">
+            <h1>CV de Parpaillon Olivier</h1>
+        </div>
     </header>
     <div class="container">
         <div class="Bloc_left">
