--- a/testCV.html
+++ b/testCV.html
@@ -74,34 +74,43 @@
     </section>
 
     <section>
-        <h2>Skills</h2>
-        <div class="skills">
-            <div class="skills-logo">
-                <a href="https://campus.academy/"><img src="image\CA.png" alt="Logo CA"></a>
+        <h2>Expériences professionnelles</h2>
+        <div class="xp">
+            <div class="xp-logo">
+                <a href="https://flanagankerins.ie"><img src="image\CA.png" alt="Logo CA"></a>
             </div>
-            <div class="skills-info">
-                <h3>Campus Academy</h3>
-                <h4>2020 - ...</h4>
+            <div class="xp-info">
+                <h3>Flanagan Kerins</h3>
+                <h4>Avril/Mai 2019 - 4 semaines</h4>
             </div>
-            <div class="skills-desc">
-                <p>Etudiant en bachelor première année en Switch IT Dev/Ops </p>
-            </div>
-        </div>
-        <div class="skills">
-            <div class="skills-logo">
-                <a href="https://www.stemarieduport.fr/"><img src="image\logo_smp.jpg" alt="Logo Sainte Marie du Port "></a>
-            </div>
-            <div class="skills-info">
-                <h3>Lycée Sainte Marie du Port</h3>
-                <h4>2017 - 2020</h4>
-            </div>
-            <div class="skills-desc">
-                <p>Obtention du BEP et du BAC professionnel Système Numérique. </p>
+            <div class="xp-desc">
+                <p>Stage découverte dans une entreprise de vente de meuble afin d'y approfondir mon anglais dans le cadre d'ERASMUS.</p>
             </div>
         </div>
-
-
-
+        <div class="xp">
+            <div class="xp-logo">
+                <a href="https://www.atlanticcaissereseau.fr"><img src="image\logo_smp.jpg" alt="Logo Sainte Marie du Port "></a>
+            </div>
+            <div class="xp-info">
+                <h3>Atlantic Caisse Réseau</h3>
+                <h4>Juin 2018 - 3 semaines / Novembre 2019 - 4 semaines</h4>
+            </div>
+            <div class="xp-desc">
+                <p>Installations de caisses enregistreuses en réseau pour des restaurants. Configuration de routeur et point d'accès WiFi sur le réseau privé d'une entreprise.</p>
+            </div>
+        </div>
+        <div class="xp">
+            <div class="xp-logo">
+                <a href="http://dfi85.com"><img src="image\logo_smp.jpg" alt="Logo Sainte Marie du Port "></a>
+            </div>
+            <div class="xp-info">
+                <h3>DFI informatique</h3>
+                <h4>Avril 2018 - 3 semaines / Novmbre 2019 - 4 semaines</h4>
+            </div>
+            <div class="xp-desc">
+                <p>Réalisation de maintenances informatique, nettoyage de virus, réparation hardware et software sur des ordinateurs clients. Réparations et reconditionnements d'ordinateurs fixe et portable pour de la mise en vente en occasion</p>
+            </div>
+        </div>
     </section>
 
 
