--- a/testCV.html
+++ b/testCV.html
@@ -61,7 +61,7 @@
         </div>
         <div class="form">
             <div class="form-logo">
-                <a href="https://www.stemarieduport.fr/"><img src="image\logo_smp.jpg" alt="Logo Sainte Marie du Port "></a>
+                <a href="https://www.stemarieduport.fr/"><img src="image\smptrans2.png" alt="Logo Sainte Marie du Port "></a>
             </div>
             <div class="form-info">
                 <h3>Lycée Sainte Marie du Port</h3>
@@ -89,7 +89,7 @@
         </div>
         <div class="xp">
             <div class="xp-logo">
-                <a href="https://www.atlanticcaissereseau.fr"><img src="image\logo_smp.jpg" alt="Logo Sainte Marie du Port "></a>
+                <a href="https://www.atlanticcaissereseau.fr"><img src="image\acrtrans.png" alt="Logo Sainte Marie du Port "></a>
             </div>
             <div class="xp-info">
                 <h3>Atlantic Caisse Réseau</h3>
@@ -101,7 +101,7 @@
         </div>
         <div class="xp">
             <div class="xp-logo">
-                <a href="http://dfi85.com"><img src="image\logo_smp.jpg" alt="Logo Sainte Marie du Port "></a>
+                <a href="http://dfi85.com"><img src="image\DFItrans.png" alt="Logo Sainte Marie du Port "></a>
             </div>
             <div class="xp-info">
                 <h3>DFI informatique</h3>
@@ -113,6 +113,44 @@
         </div>
     </section>
 
+    <section>
+        <h2>Compétences</h2>
+        <h3 class="h3gauche">Professionnelles</h3>
+        <div class="comp">
+            <p>Virtualisation</p>
+            <div class="conteneur-barre"><span class="barre c90"></span></div>
+        </div>
+        <div class="comp">
+            <p>Gestion infrastructure</p>
+            <div class="conteneur-barre"><span class="barre c90"></span></div>
+        </div>
+        <div class="comp">
+            <p>Systèmes et réseaux</p>
+            <div class="conteneur-barre"><span class="barre c80"></span></div>
+        </div>
+
+        <h3 class="h3gauche">Personnelles</h3>
+        <div class="comp2">
+            <p>Créativité</p>
+            <p>90%</p>
+            <div class="conteneur-barre2"><span class="barre c90"></span></div>
+        </div>
+        <div class="comp2">
+            <p>Adaptation</p>
+            <p>85%</p>
+            <div class="conteneur-barre2"><span class="barre c85"></span></div>
+        </div>
+        <div class="comp2">
+            <p>Sérieux</p>
+            <p>95%</p>
+            <div class="conteneur-barre2"><span class="barre c95"></span></div>
+        </div>
+        <div class="comp2">
+            <p>Pédagogie</p>
+            <p>95%</p>
+            <div class="conteneur-barre2"><span class="barre c95"></span></div>
+        </div>
+    </section>
 
 
 
