--- a/testCV.html
+++ b/testCV.html
@@ -52,7 +52,7 @@
                 <a href="https://campus.academy/"><img src="image\CA.png" alt="Logo CA"></a>
             </div>
             <div class="form-info">
-                <h3>Campus Academy</h3>
+                <a href="https://campus.academy/"><h3><u>Campus Academy</u></h3></a>
                 <h4>2020 - ...</h4>
             </div>
             <div class="form-desc">
@@ -64,7 +64,7 @@
                 <a href="https://www.stemarieduport.fr/"><img src="image\smptrans2.png" alt="Logo Sainte Marie du Port "></a>
             </div>
             <div class="form-info">
-                <h3>Lycée Sainte Marie du Port</h3>
+                <a href="https://www.stemarieduport.fr/"><h3><u>Lycée Sainte Marie du Port</u></h3></a>
                 <h4>2017 - 2020</h4>
             </div>
             <div class="form-desc">
@@ -77,10 +77,10 @@
         <h2>Expériences professionnelles</h2>
         <div class="xp">
             <div class="xp-logo">
-                <a href="https://flanagankerins.ie"><img src="image\CA.png" alt="Logo CA"></a>
+                <a href="https://flanagankerins.ie"><img src="image\FK2.png" alt="Logo CA"></a>
             </div>
             <div class="xp-info">
-                <h3>Flanagan Kerins</h3>
+                <a href="https://flanagankerins.ie"><h3><u>Flanagan Kerins</u></h3></a>
                 <h4>Avril/Mai 2019 - 4 semaines</h4>
             </div>
             <div class="xp-desc">
@@ -92,7 +92,7 @@
                 <a href="https://www.atlanticcaissereseau.fr"><img src="image\acrtrans.png" alt="Logo Sainte Marie du Port "></a>
             </div>
             <div class="xp-info">
-                <h3>Atlantic Caisse Réseau</h3>
+                <a href="https://www.atlanticcaissereseau.fr"><h3><u>Atlantic Caisse Réseau</u></h3></a>
                 <h4>Juin 2018 - 3 semaines / Novembre 2019 - 4 semaines</h4>
             </div>
             <div class="xp-desc">
@@ -104,7 +104,7 @@
                 <a href="http://dfi85.com"><img src="image\DFItrans.png" alt="Logo Sainte Marie du Port "></a>
             </div>
             <div class="xp-info">
-                <h3>DFI informatique</h3>
+                <a href="http://dfi85.com"><h3><u>DFI informatique</u></h3></a>
                 <h4>Avril 2018 - 3 semaines / Novmbre 2019 - 4 semaines</h4>
             </div>
             <div class="xp-desc">
