--- a/testCV.html
+++ b/testCV.html
@@ -6,6 +6,8 @@
     <meta charset="utf-8">
     <title>CV PARPAILLON Olivier</title>
     <link href="styles.css" rel="stylesheet" type="text/css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -24,19 +26,19 @@
         <div class="contact">
             <h2>Informations de contact</h2>
             <div class="contact-flex">
-                <p>Nom : </p>
+                <p><b>Nom : </b></p>
                 <p>PARPAILLON Olivier</p>
             </div>
             <div class="contact-flex">
-                <p>Adresse : </p>
+                <p><b>Adresse : </b></p>
                 <p>17 rue d'Auvours - 44000 Nantes</p>
             </div>
             <div class="contact-flex">
-                <p>Téléphone :</p>
+                <p><b>Téléphone :</b></p>
                 <p>06 79 60 66 88</p>
             </div>
             <div class="contact-flex">
-                <p>Mail : </p>
+                <p><b>Mail : </b></p>
                 <p><a href="mailto:olivier.parpaillon@campus.academy">olivier.parpaillon@campus.academy</a></p>
             </div>
             <div class="social">
@@ -131,14 +133,14 @@
 
         <h3 class="h3gauche">Personnelles</h3>
         <div class="comp2">
-            <p>Créativité</p>
-            <p>90%</p>
-            <div class="conteneur-barre2"><span class="barre c90"></span></div>
+            <p>Investissement</p>
+            <p>95%</p>
+            <div class="conteneur-barre2"><span class="barre c95"></span></div>
         </div>
         <div class="comp2">
             <p>Adaptation</p>
-            <p>85%</p>
-            <div class="conteneur-barre2"><span class="barre c85"></span></div>
+            <p>80%</p>
+            <div class="conteneur-barre2"><span class="barre c80"></span></div>
         </div>
         <div class="comp2">
             <p>Sérieux</p>
@@ -146,9 +148,9 @@
             <div class="conteneur-barre2"><span class="barre c95"></span></div>
         </div>
         <div class="comp2">
-            <p>Pédagogie</p>
-            <p>95%</p>
-            <div class="conteneur-barre2"><span class="barre c95"></span></div>
+            <p>Autonomie</p>
+            <p>90%</p>
+            <div class="conteneur-barre2"><span class="barre c90"></span></div>
         </div>
     </section>
 
