--- a/testCV.html
+++ b/testCV.html
@@ -154,6 +154,22 @@
         </div>
     </section>
 
+    <section>
+        <h2>Centres d'intérêt</h2>
+        <figure class="interet">
+            <img src="image/cuisine.jpg" alt="Cuisine">
+            <figcaption>Cuisine</figcaption>
+        </figure>
+        <figure class="interet">
+            <img src="image/gaming.jpg" alt="Gaming">
+            <figcaption>Jeux vidéos</figcaption>
+        </figure>
+        <figure class="interet">
+            <img src="image/livre.jpg" alt="Littérature">
+            <figcaption>Littérature</figcaption>
+        </figure>
+    </section>
+
 
 
 </body>
