--- a/CV-Parpaillon_Olivier.html
+++ b/CV-Parpaillon_Olivier.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <title>CV PARPAILLON Olivier</title>
     <link href="styles.css" rel="stylesheet" type="text/css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 
@@ -54,7 +54,9 @@
                 <a href="https://campus.academy/"><img src="image\CA.png" alt="Logo CA"></a>
             </div>
             <div class="form-info">
-                <a href="https://campus.academy/"><h3><u>Campus Academy</u></h3></a>
+                <a href="https://campus.academy/">
+                    <h3><u>Campus Academy</u></h3>
+                </a>
                 <h4>2020 - ...</h4>
             </div>
             <div class="form-desc">
@@ -66,7 +68,9 @@
                 <a href="https://www.stemarieduport.fr/"><img src="image\smptrans2.png" alt="Logo Sainte Marie du Port "></a>
             </div>
             <div class="form-info">
-                <a href="https://www.stemarieduport.fr/"><h3><u>Lycée Sainte Marie du Port</u></h3></a>
+                <a href="https://www.stemarieduport.fr/">
+                    <h3><u>Lycée Sainte Marie du Port</u></h3>
+                </a>
                 <h4>2017 - 2020</h4>
             </div>
             <div class="form-desc">
@@ -82,7 +86,9 @@
                 <a href="https://flanagankerins.ie"><img src="image\FK2.png" alt="Logo CA"></a>
             </div>
             <div class="xp-info">
-                <a href="https://flanagankerins.ie"><h3><u>Flanagan Kerins</u></h3></a>
+                <a href="https://flanagankerins.ie">
+                    <h3><u>Flanagan Kerins</u></h3>
+                </a>
                 <h4>Avril/Mai 2019 - 4 semaines</h4>
             </div>
             <div class="xp-desc">
@@ -94,7 +100,9 @@
                 <a href="https://www.atlanticcaissereseau.fr"><img src="image\acrtrans.png" alt="Logo Sainte Marie du Port "></a>
             </div>
             <div class="xp-info">
-                <a href="https://www.atlanticcaissereseau.fr"><h3><u>Atlantic Caisse Réseau</u></h3></a>
+                <a href="https://www.atlanticcaissereseau.fr">
+                    <h3><u>Atlantic Caisse Réseau</u></h3>
+                </a>
                 <h4>Juin 2018 - 3 semaines / Novembre 2019 - 4 semaines</h4>
             </div>
             <div class="xp-desc">
@@ -106,8 +114,10 @@
                 <a href="http://dfi85.com"><img src="image\DFItrans.png" alt="Logo Sainte Marie du Port "></a>
             </div>
             <div class="xp-info">
-                <a href="http://dfi85.com"><h3><u>DFI informatique</u></h3></a>
-                <h4>Avril 2018 - 3 semaines / Novmbre 2019 - 4 semaines</h4>
+                <a href="http://dfi85.com">
+                    <h3><u>DFI informatique</u></h3>
+                </a>
+                <h4>Avril 2018 - 3 semaines / Janvier 2019 - 4 semaines</h4>
             </div>
             <div class="xp-desc">
                 <p>Réalisation de maintenances informatique, nettoyage de virus, réparation hardware et software sur des ordinateurs clients. Réparations et reconditionnements d'ordinateurs fixe et portable pour de la mise en vente en occasion</p>
@@ -119,36 +129,48 @@
         <h2>Compétences</h2>
         <h3 class="h3gauche">Professionnelles</h3>
         <div class="comp">
-            <p>Virtualisation</p>
+            <p><b>Virtualisation</b></p>
             <div class="conteneur-barre"><span class="barre c90"></span></div>
         </div>
         <div class="comp">
-            <p>Gestion infrastructure</p>
+            <p><b>Gestion infrastructure</b></p>
             <div class="conteneur-barre"><span class="barre c90"></span></div>
         </div>
         <div class="comp">
-            <p>Systèmes et réseaux</p>
-            <div class="conteneur-barre"><span class="barre c80"></span></div>
+            <p><b>Systèmes et réseaux</b></p>
+            <div class="conteneur-barre"><span class="barre c85"></span></div>
+        </div>
+        <div class="comp">
+            <p><b>Windows</b></p>
+            <div class="conteneur-barre"><span class="barre c95"></span></div>
+        </div>
+        <div class="comp">
+            <p><b>MAC OS</b></p>
+            <div class="conteneur-barre"><span class="barre c75"></span></div>
+        </div>
+        <div class="comp">
+            <p><b>Linux</b></p>
+            <div class="conteneur-barre"><span class="barre c75"></span></div>
         </div>
 
         <h3 class="h3gauche">Personnelles</h3>
         <div class="comp2">
-            <p>Investissement</p>
+            <p><b>Investissement</b></p>
             <p>95%</p>
             <div class="conteneur-barre2"><span class="barre c95"></span></div>
         </div>
         <div class="comp2">
-            <p>Adaptation</p>
+            <p><b>Adaptation</b></p>
             <p>80%</p>
             <div class="conteneur-barre2"><span class="barre c80"></span></div>
         </div>
         <div class="comp2">
-            <p>Sérieux</p>
+            <p><b>Sérieux</b></p>
             <p>95%</p>
             <div class="conteneur-barre2"><span class="barre c95"></span></div>
         </div>
         <div class="comp2">
-            <p>Autonomie</p>
+            <p><b>Autonomie</b></p>
             <p>90%</p>
             <div class="conteneur-barre2"><span class="barre c90"></span></div>
         </div>
